# feira-ciencias-ecl

./: .gitignore  .pylintrc  Dockerfile  LICENSE  Procfile  README.md  app.py  pyproject.toml  render.yaml
.streamlit/: config.toml
utils/: constants.py
