[tool.poetry]
name = "streamlit app"
version = "0.1.0"
description = ""
authors = ["Gustavo Oliveira <gustavo.bibiano@totvs.com.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.1"
streamlit = "^1.22.0"
langchain = "^0.0.181"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
