[tool.poetry]
name = "streamlit app"
version = "0.1.0"
description = ""
authors = ["Gustavo Oliveira <gustavo.bibiano@totvs.com.br>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.1"
streamlit = "^1.22.0"
wikipedia = "^1.4.0"
sympy = "^1.12"
sentencepiece = "^0.1.99"
pypdf2 = "^3.0.1"
tabulate = "^0.9.0"
watchdog = "^5.0.2"
langchain-openai = "^0.1.23"
langchain = "^0.2.16"
langchain-community = "^0.2.16"
faiss-cpu = "^1.8.0.post1"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
